--- a/dot_config/greenclip.toml
+++ b/dot_config/greenclip.toml
@@ -6,6 +6,9 @@
   image_cache_directory = "/tmp/greenclip"
   max_history_length = 50
   max_selection_size_bytes = 0
-  static_history = ["¯\_(ツ)_/¯", "( ͡° ͜ʖ ͡°)"]
+  static_history = [
+    '''¯\_(ツ)_/¯''',
+    '''( ͡° ͜ʖ ͡°)'''
+  ]
   trim_space_from_selection = true
   use_primary_selection_as_input = false
